<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#D3D3D3"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:text="@string/modify_plant_profile_header"
        android:textSize="14pt" />

        <EditText
            android:id="@+id/min_range_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lower_range_temperature"
            android:inputType="text"
            android:paddingTop="25dp" />

    <EditText
        android:id="@+id/max_range_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/higher_range_temperature"
        android:inputType="text"
        android:paddingTop="25dp" />

        <EditText
            android:id="@+id/humidity_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/humid_level"
            android:inputType="text"
            android:paddingTop="25dp" />

        <EditText
        android:id="@+id/co2_level_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_temperature"
        android:inputType="text"
        android:paddingTop="25dp" />

    <EditText
        android:id="@+id/water_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/water_amount"
        android:inputType="text"
        android:paddingTop="25dp" />

    <EditText
        android:id="@+id/watering_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/watering_interval"
        android:inputType="text"
        android:paddingTop="25dp" />

    <ImageView
    android:layout_width="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:src="@drawable/saveButton"
    />

</LinearLayout>