<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:textSize="14pt"
        />

    <EditText
        android:paddingTop="25dp"
        android:id="@+id/email_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/email_input_hint"
        android:inputType="text"/>

    <EditText
        android:paddingTop="25dp"
        android:id="@+id/username_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/username_input_hint"
        android:inputType="text"/>

    <EditText
        android:paddingTop="25dp"
        android:id="@+id/name_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/name_input_hint"
        android:inputType="text"/>

    <EditText
        android:paddingTop="25dp"
        android:id="@+id/password_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/password_input_hint"
        android:inputType="text"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <Button
            android:layout_toRightOf="@+id/button_login"
            android:id="@+id/button_register"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/register" />
    </RelativeLayout>

</LinearLayout>