<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:textSize="14pt"
        android:gravity="center"
        android:id="@+id/create_plant_profile_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:text="@string/create_plant_profile" />

    <EditText
        android:paddingTop="25dp"
        android:id="@+id/input_plant_name"
        android:layout_height="wrap_content"
        android:layout_width="275dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/input_plant_name_hint"
        android:background="@color/white"
        android:padding="10dp"
        android:inputType="text"/>

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:textSize="14pt"
        android:gravity="center"
        android:id="@+id/select_template"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:text="@string/select_template" />


    <Spinner
        android:id="@+id/spinner"
        android:layout_height="wrap_content"
        android:layout_width="275dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/spinner"
        android:spinnerMode="dropdown"
        android:padding="10dp"
     />

    <Button
        android:id="@+id/button_create"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn"
        android:gravity="center"
        android:text="@string/createbtn"
        android:textColor="@color/white"
       />





</LinearLayout>