<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/plant_name_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plant_name"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/white"
        android:textSize="11pt"
        />

    <TextView
        android:id="@+id/current_temperature_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_temperature"
        android:layout_marginLeft="15dp"
        android:textColor="@color/white"
        android:textSize="11pt"
        />

    <TextView
        android:id="@+id/humidity_level_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humid_level"
        android:layout_marginLeft="15dp"
        android:textColor="@color/white"
        android:textSize="11pt"
        />

    <TextView
        android:id="@+id/co2_level_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/co2_level"
        android:layout_marginLeft="15dp"
        android:textColor="@color/white"
        android:textSize="11pt"
        />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <Button
            android:id="@+id/modify_plant_profile_button"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:textColor="@color/white"
            android:layout_marginLeft="105dp"
            android:layout_marginBottom="10dp"
            android:text="@string/modify_plant_profile" />
        <Button
            android:id="@+id/water_plant_button"
            android:layout_below="@+id/modify_plant_profile_button"
            android:layout_gravity="center_horizontal"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:background="@drawable/btn"
            android:textColor="@color/white"
            android:text="@string/water_plant" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/delete_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_alignParentRight="true"
            android:backgroundTint="#FFA07A"
            android:src="@drawable/ic_delete_black_24dp"/>

    </RelativeLayout>




</LinearLayout>