<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    android:orientation="vertical">

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:textSize="14pt"
        android:gravity="center"
        android:id="@+id/create_plant_profile_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:text="@string/create_plant_profile" />

    <EditText
        android:paddingTop="25dp"
        android:id="@+id/input_plant_name"
        android:layout_height="wrap_content"
        android:layout_width="275dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/input_plant_name_hint"
        android:background="@color/white"
        android:padding="10dp"
        android:inputType="text"/>

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:textSize="14pt"
        android:gravity="center"
        android:id="@+id/select_template"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:text="@string/select_template" />
    
    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_drop_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.AppCompatSpinner>





</LinearLayout>