<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundlogin"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/modify_plant_profile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/modify_plant_profile_header"
        android:textSize="14pt" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="16dp" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="16dp" />


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="16dp" >
        <EditText
            android:id="@+id/profile_name"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:hint="@string/profile_name"
            android:inputType="text"
            android:background="@color/white"
            android:padding="10dp"
            android:paddingTop="25dp" />


    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="16dp" >
        <EditText
            android:id="@+id/water_amount"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:hint="@string/water_amount"
            android:inputType="text"
            android:background="@color/white"
            android:padding="10dp"
            android:paddingTop="25dp" />


        <ImageView
            android:layout_toRightOf="@id/water_amount"
            android:id="@+id/water_amount_image"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:src="@drawable/wateramount"
            />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="16dp" >
        <EditText
            android:id="@+id/watering_interval"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:hint="@string/watering_interval"
            android:inputType="text"
            android:background="@color/white"
            android:padding="10dp"
            android:paddingTop="25dp" />


        <ImageView
            android:layout_toRightOf="@id/watering_interval"
            android:id="@+id/watering_interval_image"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:src="@drawable/wateringinterval"
            />
    </RelativeLayout>


    <Button
        android:id="@+id/savebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/savebutton"
        />

</LinearLayout>